--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-  "name": "understrap-child",
-  "version": "0.3.0",
-  "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
+  "name": "yofisio-theme",
+  "version": "0.0.1",
+  "description": "Yofisio Theme",
   "main": "index.js",
   "scripts": {
     "postinstall": "gulp copy-assets"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/holger1411/understrap-child.git"
+    "url": ""
   },
-    "keywords": [
+  "keywords": [
     "wordpress",
     "theme",
     "framework",
     "bootstrap",
     "underscores"
   ],
-
-  "author": "Holger Koenemann",
+  "author": "Alejandro Morente",
   "license": "GPL-2.0",
-  "bugs": {
-    "url": "https://github.com/holger1411/understrap-child/issues"
-  },
-  "homepage": "https://understrap.com",
+  "homepage": "https:/braunmarketingandconsulting.es",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.4",
     "gulp-clone": "^1.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
@@ -45,9 +42,7 @@
     "gulp-watch": "^4.3.11",
     "merge2": "^1.0.3",
     "run-sequence": "^1.2.2",
-    "gulp-clean-css": "^3.0.4",
-    "undescores-for-npm": "^1.0.0",
-    "understrap": "^0.6.0"
+    "understrap": "^0.6.0",
+    "undescores-for-npm": "^1.0.0"
   }
-    
 }
