--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "GPL-2.0",
   "homepage": "https:/braunmarketingandconsulting.es",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
