--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "description": "Yofisio Theme",
   "main": "index.js",
-  "scripts": {
-    "postinstall": "gulp copy-assets"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": ""
@@ -42,6 +40,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "merge2": "^1.0.3",
+    "node-sass": "^4.5.3",
     "run-sequence": "^1.2.2",
     "understrap": "^0.6.0",
     "undescores-for-npm": "^1.0.0"
